tests/ui/type/pattern_types/range_patterns_unusable_math.stderr
error[E0369]: cannot add `u32` to `(u32) is 1..`
  --> $DIR/range_patterns_unusable_math.rs:14:15
   |
LL |     let x = x + 1_u32;
   |             - ^ ----- u32
   |             |
   |             (u32) is 1..

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0369`.
